# hooki

./: LICENSE  README.md  app.py  local.env  package-lock.json  pyproject.toml  requirements.txt  tailwind.config.js
migrations/versions/: 4602754b1021_.py  661921f1e8b4_.py  d5b9ebfb4c57_.py
models/: models.py  serializers.py
services/: auth.py  main.py  tasks.py
static/css/: output.css
static/js/: task.js
templates/: base.html  index.html  login.html
utils/: hash.py  task.py
