[tool.poetry]
name = "hooki"
version = "0.1.0"
description = ""
authors = ["iorjunior <juniorcoda@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"

[tool.poetry.dev-dependencies]
commitizen = "^2.42.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
